Fixed misaligned Close button when arrows aren't present

--- a/less/hotgraphicaudioPopup.less
+++ b/less/hotgraphicaudioPopup.less
@@ -1,15 +1,15 @@
 .hotgraphicaudio-popup {
   position: relative;
 
+  .notify__btn-container {
+    clear: both;
+  }
+
   // Pop up toolbar
   // --------------------------------------------------
   &__toolbar {
     margin-top: @btn-margin;
     clear: both;
-  }
-
-  &__toolbar.hide-pagination {
-    justify-content: flex-end;
   }
 
   &__count {
